# homeHub

./: .dockerignore  .env.example  .gitignore  AGENTS.md  AGENT_DEVELOPMENT_REQUIREMENTS.md  ARCHITECTURE.md  Dockerfile  README.md  docker-compose.yml  main.py  manage.py  pyproject.toml  requirements-dev.txt  requirements.txt  restart_homehub.sh  start_homehub.sh  stop_homehub.sh
.cursor/rules/: homehub-engineering.mdc  homehub-python.mdc  project-communication.mdc  project-scope.mdc
.cursor/skills/agent-selection/: SKILL.md
agents/: aiogram-expert.md  api-documenter.md  backend.md  code-reviewer.md  django-pro.md  dock-research.md  docker-expert.md  instructions.md  platform.md  python-pro.md  sql-pro.md
apps/accounts/: admin.py  apps.py  context_processors.py  models.py  services.py  tests.py
apps/files/: admin.py  albums.py  apps.py  forms.py  models.py  permissions.py  services.py  storage.py  tests.py  urls.py  video_poster.py  views.py
apps/files/migrations/: 0001_initial.py  (+2 more)
apps/web/: apps.py  mixins.py  tests.py  urls.py  views.py
bot/: __init__.py  config.py  main.py
bot/middlewares/: __init__.py  auth.py
bot/routers/: __init__.py  admin.py  album.py  dictionary.py  media.py
bot/services/: __init__.py  dictionary.py  ingestion.py  shutdown.py  telegram_download.py
bot/tests/: test_admin_shutdown.py  test_telegram_download.py
docker/: entrypoint-bot.sh  entrypoint-web.sh
homehub/: asgi.py  settings.py  urls.py  wsgi.py
scripts/: backup-db.sh  backup_homehub.sh  deploy-to-server.sh  export_backups.sh  export_storage.sh  load-host-env.sh
(+26 files in other folders)
