[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "homehub"
version = "0.1.0"
description = "Локальный домашний сервер для файлов, медиа и будущих домашних интеграций."
requires-python = ">=3.12"
dependencies = [
    "Django>=5.2,<6.0",
    "aiogram>=3.27,<4.0",
    "psycopg[binary]>=3.2,<4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-django>=4.8",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "homehub.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]

[tool.setuptools.packages.find]
include = ["apps*", "bot*", "homehub*"]
exclude = ["agents*", "storage*"]
